add enum perfil